# AI-Project-Text-To-SQL-self-reporting-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: requirements.txt
app/src/core/: llm_management.py  model_usage.py
app/src/model/: tokenizer.json  tokenizer_config.json
src/: console_app.py  streamlit_app.py
src/core/: llm_management.py
src/data/training_set/: schema.json
src/model/: README.md  adapter_config.json  special_tokens_map.json
src/services/: sql_validator.py
src/utils/: definitions.py
