[project]
name = "code-llama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.45.5",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "peft>=0.15.2",
    "streamlit>=1.45.1",
    "transformers>=4.52.3",
]
